# volby-2023

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  README.md  db.sql  entrypoint.sh  mypy.ini  publish.sh  pyproject.toml
app/: application.py
app/pages/: first_round.py
data/: VUSC_P.dbf  VUSC_P.shx
helpers/: data_loading.py  formatting.py  mapping.py
settings/: base.py  static.py
volby_2023/: application.py
volby_2023/pages/: first_round.py
