[tool.poetry]
name = "volby-2023"
version = "0.1.0"
description = ""
authors = ["Roman Zydyk <romanzdk@gmail.com>"]
readme = "README.md"
packages = [{include = "volby_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
python-decouple = "^3.6"
streamlit = "^1.7.0"
psycopg2 = "^2.9.5"
plotly = "^5.11.0"
streamlit-autorefresh = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
